--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>Aluraflix</title>
+    <title>Aninhaflix</title>
 </head>
 
 <body>
 
-    <header>ALURAFLIX</header>
+    <header>ANINHAFLIX</header>
 
     <section class="chamada">
         <div class="chamada-texto">
